Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjBoolean.quorum
class Main
    action Main
        Text v
        v:SetValue(Test())
    end

    action Test() returns Text
        boolean var = true
        return var
    end
end